# coordination_aware_MARL

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt
configs/smoke/: all.yaml  coma.yaml  dqn.yaml  fdqn.yaml  iql.yaml  qmix.yaml  qtran.yaml  stat.yaml  vdn.yaml
docs/: adding_methods.md  pymarl_integration.md  release_scope.md  reproducibility.md
scripts/: run_smoke.py
src/dqn/: eval_dqn.py  run_all_evals.py  train_dqn.py
src/fdqn/: eval_fdqn.py  run_all_evals.py  train_fdqn.py
src/stat_env/: __init__.py  config.py  core.py  factory.py  gymnasium_env.py  pymarl_env.py  stat_gym.py  stat_model.py
tests/: test_coma_smoke.py  test_stat_env_smoke.py
